--- a/index.html
+++ b/index.html
@@ -4,99 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeoGenesis - Character Prompt Generator</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Rajdhani', sans-serif;
-        background-color: #050505;
-        color: #e2e8f0;
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Rajdhani', 'sans-serif'],
+              brand: ['Orbitron', 'sans-serif'],
+            },
+          },
+        },
       }
-      h1, h2, h3, .brand-font {
-        font-family: 'Orbitron', sans-serif;
-      }
-      .neon-border {
-        box-shadow: 0 0 10px rgba(6, 182, 212, 0.5), inset 0 0 5px rgba(6, 182, 212, 0.2);
-      }
-      .neon-text {
-        text-shadow: 0 0 5px rgba(6, 182, 212, 0.8);
-      }
-      
-      /* GLITCH EFFECT FOR TITLE */
-      .glitch-wrapper {
-        position: relative;
-        display: inline-block;
-      }
-      .glitch {
-        position: relative;
-        color: white;
-        letter-spacing: -2px;
-      }
-      .glitch::before,
-      .glitch::after {
-        content: attr(data-text);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #030712; /* Matches background */
-      }
-      .glitch::before {
-        left: 2px;
-        text-shadow: -1px 0 #00ffff;
-        clip: rect(24px, 550px, 90px, 0);
-        animation: glitch-anim-2 3s infinite linear alternate-reverse;
-      }
-      .glitch::after {
-        left: -2px;
-        text-shadow: -1px 0 #ff00ff;
-        clip: rect(85px, 550px, 140px, 0);
-        animation: glitch-anim 2.5s infinite linear alternate-reverse;
-      }
-      
-      @keyframes glitch-anim {
-        0% { clip: rect(14px, 9999px, 121px, 0); }
-        20% { clip: rect(80px, 9999px, 86px, 0); }
-        40% { clip: rect(30px, 9999px, 92px, 0); }
-        60% { clip: rect(26px, 9999px, 15px, 0); }
-        80% { clip: rect(96px, 9999px, 10px, 0); }
-        100% { clip: rect(65px, 9999px, 49px, 0); }
-      }
-      @keyframes glitch-anim-2 {
-        0% { clip: rect(129px, 9999px, 36px, 0); }
-        20% { clip: rect(3px, 9999px, 4px, 0); }
-        40% { clip: rect(78px, 9999px, 94px, 0); }
-        60% { clip: rect(25px, 9999px, 66px, 0); }
-        80% { clip: rect(12px, 9999px, 149px, 0); }
-        100% { clip: rect(126px, 9999px, 100px, 0); }
-      }
-
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #0f172a; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #0891b2; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #06b6d4; 
-      }
-    </style>
-  <script type="importmap">
+    </script>
+<script type="importmap">
 {
   "imports": {
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
